cmake_minimum_required(VERSION 3.29)
project(CPP_Primer_Plus_Chapter_10)

set(CMAKE_CXX_STANDARD 20)

add_executable(CPP_Primer_Plus_Chapter_10 main.cpp
        head.h
#        src/section_01/1001_stock00.h
#        src/section_01/1002_stock00.cpp
#        src/section_01/1003_useStock0.cpp
        src/section_01/1004_stock10.h
        src/section_01/1005_stock10.cpp
        src/section_01/1006_useStock1.cpp)
